# dagster-spark-connect

./: .gitignore  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg  setup.py
dagster_spark_connect/: __init__.py  assets.py  resources.py
